[package]
name = "force"
version = "0.1.0"
authors = ["chez"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
plotters = "^0.3.0"

[profile.release]
incremental = false
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
